--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "OREO-BOT",
+    "name": "ALAN;WALKER-MD",
     "version": "1.1.3",
     "description": "WhatsApp Bot created with the help of ShizoBot-base using Baileys. Written in javascript",
     "main": "index.js",
@@ -23,7 +23,7 @@
   ],
     "homepage": "https://github.com/shizothetechie/oreo-bot",
     "author": {
-        "name": "Shizo The Techie"
+        "name": "Ibrahim Adams"
     },
     "repository": {
         "type": "git",
