--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "ALAN;WALKER-MD",
+  "name": "ALAN-WALKER-MD",
   "description": "WhatsApp Bot Base using Baileys. Written in javascript",
   "keywords": [
     "whatsapp bot",
@@ -32,12 +32,12 @@
      "BOT_NAME": {
       "description": "Name of Your Bot",
       "required": false,
-      "value": "ALAN;WALKER-MD"
+      "value": "𝗔𝗟𝗔𝗡-𝗪𝗔𝗟𝗞𝗘𝗥-𝗠𝗗"
     },
 "OWNER_NAME": {
       "description": "owner name of the bot or Your Name",
       "required": false,
-      "value": "Ibrahim-Tech"
+      "value": "𝗠𝗥 𝗜𝗕𝗥𝗔𝗛𝗜𝗠"
     },
 "OWNER_NUMBER": {
       "description": "Your number or bot owner number",
